@@ -1,7 +1,3 @@
-// To use this, install the Android SDK and run 
-// $ANDROID_HOME/tools/bin/sdkmanager --licenses
-// to accept licenses
-
 buildscript {
     repositories {
         // Gradle 4.1 and higher include support for Google's Maven repo using
@@ -88,42 +84,4 @@ dependencies {
     testImplementation "org.yaml:snakeyaml:1.28"
     testImplementation "javax.xml.soap:javax.xml.soap-api:1.4.0"
 }
-
-
-
-// test {
-//     useJUnit()
-//     exclude "**/benchmarks/**"
-
-//     jvmArgs += '-Xss1280k'
-
-//     if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
-//         jvmArgs += ['--add-opens', 'java.desktop/javax.swing.table=ALL-UNNAMED']
-//     }
-
-//     jacoco.excludes = ['**/testsrc_tests_ecma_3_RegExp_perlstress*']
-
-//     systemProperty 'java.awt.headless', 'true'
-//     systemProperty 'mozilla.js.tests', 'testsrc/tests'
-//     systemProperty 'mozilla.js.tests.timeout', 60000
-//     systemProperty 'user.language', 'en'
-//     systemProperty 'user.country', 'US'
-//     systemProperty 'user.timezone', 'America/Los_Angeles'
-//     systemProperty 'file.encoding', 'UTF-8'
-//     if (System.getProperty('quick') != null) {
-//         systemProperty 'TEST_OPTLEVEL', -1
-//     } else if (System.getProperty('optLevel')) {
-//         systemProperty 'TEST_OPTLEVEL', System.getProperty('optLevel')
-//     }
-//     systemProperty 'test262properties', System.getProperty('test262properties')
-//     if (System.getProperty('updateTest262properties') != null) {
-//         systemProperty 'updateTest262properties', System.getProperty('updateTest262properties')
-//     }
-//     maxHeapSize = "1g"
-//     testLogging.showStandardStreams = true
-//     // Many tests do not clean up contexts properly. This makes the tests much
-//     // more resilient at the expense of performance.
-//     forkEvery = 1
-//     maxParallelForks = 64
-// }
 
